访问规则配置、登录成功/失败handler配置、登录用户信息读取

--- a/backend/code/pom.xml
+++ b/backend/code/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>hutool-all</artifactId>
             <version>5.7.22</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
