--- a/backend/code/api/src/main/resources/application.yml
+++ b/backend/code/api/src/main/resources/application.yml
@@ -64,6 +64,13 @@ spring:
         connectionProperties: druid.stat.mergeSql\=true;druid.stat.slowSqlMillis\=5000
       primary: master #设置默认的数据源或者数据源组,默认值即为master
       strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
+  security:
+    user:
+      name: user
+      password: user
+      roles:
+        - admin
+        - manager
 
 #mybatis plus 设置
 mybatis-plus:
@@ -74,7 +81,7 @@ mybatis-plus:
     banner: false
     db-config:
       #主键类型  0:"数据库ID自增",1:"该类型为未设置主键类型", 2:"用户输入ID",3:"全局唯一ID (数字类型唯一ID)", 4:"全局唯一ID UUID",5:"字符串全局唯一ID (idWorker 的字符串表示)";
-      id-type: 4
+      id-type: ASSIGN_UUID
       # 默认数据库表下划线命名
       table-underline: true
   configuration:
