spring-security 增加Jwt登录认证、请求验证token功能

--- a/backend/code/pom.xml
+++ b/backend/code/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>system</module>
         <module>api</module>
+        <module>common</module>
     </modules>
     <name>iCode</name>
     <description>Demo project for Spring Boot</description>
